prep for heroku

--- a/static/account.html
+++ b/static/account.html
@@ -69,7 +69,7 @@
             </div>
 
             <div class="tm-portal" >
-                <h3>Transactions [{{trans.length}} of {{transCount}}]</h3>
+                <h3>Transactions <small>[{{trans.length}} of {{transSummary.count}}]</small> <span class="tm-grand-total"><small>Total Amount:</small> <span tm-is-debit="{{transSummary.amountValue < 0}}">{{ transSummary.amountValue | currency }}</span></span> </h3>
                 <table class="table table-condensed table-hover tm-tran-table">
                     <tr ng-include="'templates/tran-th.html'"></tr>
                     <tr ng-repeat="tran in trans" ng-include="'templates/tran-tr.html'"></tr>
@@ -85,6 +85,7 @@
                 </table>
                 <img src="icons/thinking.gif" ng-if="thinking"/>
                 <button ng-if="!areAllTransFetched && !thinking" class="btn btn-info btn-sm" ng-click="fetchNextPage()">more</button>
+                <button ng-if="!areAllTransFetched && !thinking" class="btn btn-info btn-sm tm-fetch-all-trans-button" ng-click="fetchAllRemainingTrans()">all</button>
             </div>
         </div>
     </div>
