--- a/static/trans.html
+++ b/static/trans.html
@@ -98,7 +98,7 @@
             </div>
             <div class="col-md-6">
                 <form class="tm-portal tm-save-query-form" ng-controller="SaveQueryFormController" > 
-                    <h4>Save Query <small>(note: you must run the query first before saving it)</small></h4>
+                    <h4>Load &amp; Save Query <small>(note: you must run the query first before saving it)</small></h4>
                     <div class="tm-md-autocomplete">
                         <md-autocomplete md-selected-item="selectedSavedQuery" 
                                          md-selected-item-change="onChangeSavedQuery()"
@@ -123,7 +123,7 @@
 
         <div class="row">
             <div class="tm-portal" >
-                <h3>Transactions [{{trans.length}} of {{transCount}}]</h3>
+                <h3>Transactions <small>[{{trans.length}} of {{transSummary.count}}]</small> <span class="tm-grand-total"><small>Total Amount:</small> <span tm-is-debit="{{transSummary.amountValue < 0}}">{{ transSummary.amountValue | currency }}</span></span> </h3>
                 <table class="table table-condensed table-hover tm-tran-table">
                     <tr ng-include="'templates/tran-th.html'"></tr>
                     <tr ng-repeat="tran in trans" ng-include="'templates/tran-tr.html'"></tr>
@@ -139,6 +139,7 @@
                 </table>
                 <img src="icons/thinking.gif" ng-if="thinking"/>
                 <button ng-if="!areAllTransFetched && !thinking" class="btn btn-info btn-sm" ng-click="fetchNextPage()">more</button>
+                <button ng-if="!areAllTransFetched && !thinking" class="btn btn-info btn-sm tm-fetch-all-trans-button" ng-click="fetchAllRemainingTrans()">all</button>
             </div>
         </div>
     </div>
