--- a/static/trans.html
+++ b/static/trans.html
@@ -2,35 +2,45 @@
 <html ng-app="MyApp">
 
 <head>
-    <!-- Note: load JS after html to improve rendering time -->
-    <!-- script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script -->
-    <script src="js/angular-1.5.0.js"></script>
-    <!-- script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script -->
-    <script src="js/underscore.js"></script>
+    <!-- TODO: load JS after html to improve rendering time -->
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular.min.js"></script>
+    <!-- script src="js/angular.min.js"></script -->
 
-    <script src="js/Chart.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
+    <!-- script src="js/underscore-min.js"></script -->
 
-    <!-- load app module _after_ angular (otherwise you'll get 'angular not defined') -->
-    <script src="js/angular-elastic-input.min.js"></script>
-    <script src="js/my-app.js"></script>
+    <!-- load app module(s) _after_ angular (otherwise you'll get 'angular not defined') -->
+    <script src="js/angular-elastic-input.min.js"/></script>
+
+    <script src="js/my-app.js"/></script>
 
     <!-- bootstrap -->
-    <!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous" -->
-    <!-- link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.css" -->
-    <link rel="stylesheet" href="css/bootstrap.css">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+    <!-- link rel="stylesheet" href="css/bootstrap.min.css" -->
+
     <link rel="stylesheet" href="css/my-app.css">
 
     <!-- Angular Material style sheet -->
-    <link rel="stylesheet" href="css/angular-material.css">
+    <link rel="stylesheet" href="//ajax.googleapis.com/ajax/libs/angular_material/1.0.5/angular-material.min.css">
+    <!-- link rel="stylesheet" href="css/angular-material.min.css" -->
   
     <!-- Angular Material requires Angular.js Libraries -->
-    <script src="js/angular-animate.js"></script>
-    <script src="js/angular-aria.js"></script>
-    <script src="js/angular-messages.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-animate.min.js"></script>
+    <!-- script src="js/angular-animate.min.js"></script -->
+
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-aria.min.js"></script>
+    <script src="js/angular-aria.min.js"></script>
+
+    <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-messages.min.js"></script>
+    <!-- script src="js/angular-messages.min.js"></script -->
 
     <!-- Angular Material Library -->
-    <script src="js/angular-material.js"></script>
-    
+    <script src="//ajax.googleapis.com/ajax/libs/angular_material/1.0.5/angular-material.min.js"></script>
+    <!-- script src="js/angular-material.min.js"></script -->
+
+    <!-- Chart.js -->
+    <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/1.0.2/Chart.min.js"></script>
+    <!-- script src="js/Chart.js"></script -->
 </head>
 
 <body>
