dont resize chart element

--- a/static/account.html
+++ b/static/account.html
@@ -69,10 +69,10 @@
         <div class="tm-portal">
             <h3>Time Series: Account Balance</h3>
             <div class="text-center">
-                <div> 
+                <div class="tm-tran-canvas-thinking" > 
                     <img src="icons/thinking.gif" ng-if="isChartThinking"/>
                 </div>
-                <canvas id="valueChart" width="1000" height="100"></canvas>
+                <canvas id="valueChart" width="1000" height="350"></canvas>
             </div>
         </div>
 
@@ -84,10 +84,10 @@
                 </h3>
 
                 <div class="text-center">
-                    <div> 
+                    <div class="tm-tran-canvas-thinking" > 
                         <img src="icons/thinking.gif" ng-if="isChartThinking"/>
                     </div>
-                    <canvas id="tm-tran-canvas-element" width="1000" height="100"></canvas>
+                    <canvas id="tm-tran-canvas-element" width="1000" height="350"></canvas>
                 </div>
             </div>
 
