tags exclusion filter, merchant filter

--- a/static/account.html
+++ b/static/account.html
@@ -46,7 +46,7 @@
 <body>
     <div id="tm-page-header" class="container-fluid">
         <div class="container">
-            <a href="/">Thinmint</a>
+            <a href="/">Home</a>
             <a href="/trans.html">Transactions</a>
         </div>
     </div>
