--- a/static/index.html
+++ b/static/index.html
@@ -43,7 +43,7 @@
 <body>
     <div id="tm-page-header" class="container-fluid">
         <div class="container">
-            <a href="/">Thinmint</a>
+            <a href="/">Home</a>
             <a href="/trans.html">Transactions</a>
         </div>
     </div>
@@ -51,7 +51,7 @@
     <div class="container">
 
         <div class="tm-portal" ng-controller="NewTransController">
-            <h3>New Transactions</h3>
+            <h3>New Transactions <small>(awaiting your <b>ack</b>-nowledgement)</small></h3>
             <table class="table table-condensed table-hover tm-tran-table">
                 <tr ng-include="'templates/new-tran-th.html'"></tr>
                 <tr ng-repeat="tran in newTrans" ng-include="'templates/new-tran-tr.html'"></tr>
